# pyqt-collapsible-groupbox-widget

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
examples/: basic_example.py  embed_in_your_app.py
src/collapsible_groupbox/: __init__.py  collapsible_group_box.py
tests/: test_collapsible.py
